<resources>
    <string name="app_name">GithubProfile</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="no_followers">This user have no followers</string>
    <string name="no_following">This user is not following anyone</string>
    <string name="search">Search user</string>
    <string name="search_hint">Insert Username</string>
    <string name="tab_followers">Followers</string>
    <string name="tab_following">Following</string>
    <string name="followers">Followers</string>
    <string name="following">Following</string>
    <string name="repo">Repository</string>
    <string name="logo_description">Logo GitHubProfile</string>
    <string name="favorite">Add to favorite</string>
    <string name="favorite_x">Remove favorite</string>
    <string name="setting">Setting</string>
    <string name="delete_fav">is removed from favorite</string>
    <string name="add_fav">is added to favorite</string>
    <string name="dark_mode">Dark Mode</string>
    <string name="favorite_title">Favorite</string>
</resources>